--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,11 +1,8 @@
-<div class="hero-unit"
-
+<div class="hero-unit">
 <h1>Welcome to Julia's Food Photo Page!</h1>
-<p>You've found the home page for Julia</p>
-<p>
-	
 
-	<%= link_to "Sign Up Now!", "#", class: "btn btn-primary btn-large" %>
-</p>
+<p>You've found the home page for Julia</p>
+
+<p> <%= link_to "Sign Up Now!", "#", class: "btn btn-primary btn-large" %></p>
 </div>
 
