--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,6 +1,5 @@
 <div class="footer">
 	<small>
-		<%= link_to "One Month Rails", "#" %>
-		adapted by <%= link_to "Julia Rm", "#" %>
+		<%= link_to "First Rails App", "#" %> by <%= link_to "Julia Rm", "#" %>
 	</small>
 </div>
