--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,7 @@
 <div class="hero-unit">
-<h1>Welcome to Julia's Food Photo Page!</h1>
+<h1>Welcome!</h1>
 
-<p>You've found the home page for Julia</p>
+<p>Come back soon!</p>
 
 <p> <%= link_to "Sign Up Now!", "#", class: "btn btn-primary btn-large" %></p>
 </div>
