--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -7,7 +7,7 @@
 			<span class="icon-bar"></span>
 		</a>
 
-		<a class="brand" href="#">Julia's Project</a>
+		<a class="brand" href="#">Julia Rm</a>
 		
 		<div class="nav-collapse collapse">
 		
@@ -17,7 +17,8 @@
 			</ul> 
 
 			<ul class="nav pull-right">	
-				<li><%=  link_to "Sign In", '#' %></li>
+				<li><%=  link_to "Sign In", '#' %>
+				</li>
 			</ul> 
 
 
