--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-	  <title>One Month Rails</title>
-	  <%= stylesheet_link_tag    "application", :media => "all" %>
-	  <%= javascript_include_tag "application" %>
-	  <%= csrf_meta_tags %>
+  <title>Travel Photos</title>
+  <%= stylesheet_link_tag    "application", :media => "all" %>
+  <%= javascript_include_tag "application" %>
+  <%= csrf_meta_tags %>
 </head>
 <body>
 	<%= render 'layouts/header' %>
@@ -13,4 +14,5 @@
 		<%= render 'layouts/footer' %>	
 	</div>
 </body>
+
 </html>
