--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,8 +1,9 @@
-<div class="hero-unit">
-<h1>Welcome!</h1>
-
-<p>Come back soon!</p>
-
-<p> <%= link_to "Sign Up Now!", "#", class: "btn btn-primary btn-large" %></p>
-</div>
-
+<% if user_signed_in? %>
+	<h1> You're logged in! </h1>
+<% else %> 
+	<div class="hero-unit">
+		<h1>Welcome!</h1>
+	<p>Come back soon!</p>
+	<p> <%= link_to "Sign Up Now!", new_user_registration_path, class: "btn btn-primary btn-large" %></p>
+	</div>
+<% end %>
