Update some text

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,5 +1,5 @@
 <div class="footer">
 	<small>
-		<%= link_to "First Rails App", "#" %> by <%= link_to "Julia Rm", "#" %>
+		<%= link_to "First Rails App Ever", "#" %> by <%= link_to "Julia Roytman", "#" %>
 	</small>
 </div>
