--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,7 +1,7 @@
 <h1> About </h1>
 <p>
-	<%= link_to "One Month Rails", "http://onemonthrails.com" %> is a project to teach <%= link_to "Ruby on Rails", "http://rubyonrails.org" %> 
-	in one month. This is the sample application.
+	<%= link_to "One Month Rails", "http://onemonthrails.com" %> is a class I'm taking to create a <%= link_to "Ruby on Rails", "http://rubyonrails.org" %> 
+	site in one month. Keep checking back to see more update, and put up some test pics in the meantime! 
 </p>
 
 
