--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,7 +8,7 @@
 			</a>
 	
 	
-			<%= link_to "Julia Rm", root_path, class: "brand" %>
+			<%= link_to "PhotoApp", root_path, class: "brand" %>
 
 		<div class="nav-collapse collapse">
 			<ul class="nav">	
