--- a/app/views/pages/_home.html.erb
+++ b/app/views/pages/_home.html.erb
@@ -1,11 +1,11 @@
 <% if user_signed_in? %>
 	
 
-	
+
 <% else %> 
 	<div class="hero-unit">
 		<h1>Welcome!</h1>
-	<p>Come back soon!</p>
-	<p> <%= link_to "Sign Up Now!", new_user_registration_path, class: "btn btn-primary btn-large" %></p>
+	<p>View and share your travel photos</p>
+	<p> <%= link_to "Share Photos!", new_user_registration_path, class: "btn btn-primary btn-large" %></p>
 	</div>
 <% end %>
